// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-help-text Should render text : Help text with <a href="https://www.exemple.com">a link</a>, a <strong>bold text</strong> and <em>an italic one</em>. renders 1`] = `
<mg-help-text>
  <!---->
  <p>
    Help text with &lt;a href="https://www.exemple.com"&gt;a link&lt;/a&gt;, a &lt;strong&gt;bold text&lt;/strong&gt; and &lt;em&gt;an italic one&lt;/em&gt;.
  </p>
</mg-help-text>
`;

exports[`mg-help-text Should render text : Help text with <a href="https://www.exemple.com">a link</a>, a <strong>bold text</strong> and <em>an italic one</em>. renders 2`] = `
<mg-help-text reference="blu">
  <!---->
  <p>
    Help text with &lt;a href="https://www.exemple.com"&gt;a link&lt;/a&gt;, a &lt;strong&gt;bold text&lt;/strong&gt; and &lt;em&gt;an italic one&lt;/em&gt;.
  </p>
</mg-help-text>
`;

exports[`mg-help-text Should render text : Simple help text. renders 1`] = `
<mg-help-text>
  <!---->
  <p>
    Simple help text.
  </p>
</mg-help-text>
`;

exports[`mg-help-text Should render text : Simple help text. renders 2`] = `
<mg-help-text reference="blu">
  <!---->
  <p>
    Simple help text.
  </p>
</mg-help-text>
`;
